# dakora

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  RELEASE.md  RENDER_DEPLOY.md  dakora.code-workspace  index.html  insert_sample_traces.py  promptvault.yaml  pyproject.toml  pytest.ini  railway.toml  render.yaml  test_maf_debug.py  test_server.py  validate_tests.py
cli/: README.md  pyproject.toml
cli/dakora_cli/: __init__.py  main.py
cli/dakora_cli/templates/: docker-compose.yml
server/: .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 1231c8dc0405_add_workspace_quotas_table.py  12c129dba326_add_optimization_quota_and_runs_table.py  137ea41e265f_merge_versioning_and_trace_source_.py  1655bf1f4bfa_add_api_keys_table.py  288bb30b3909_retarget_template_traces_fk_to_new_.py  337c950580c3_drop_execution_traces_table.py  3c7f1f0d5e7a_add_trace_id_to_prompt_executions.py  48c44d904937_add_unique_constraint_invitation_.py  4c2252bbbbd9_remove_tokens_limit_month_from_.py  50431352eafc_merge_migration_heads.py  5dcc8a019533_fix_prompt_versions_created_at_to_use_.py  6f3c2d51a9ab_add_source_columns_to_traces.py  731bc24c7cfa_add_otlp_constraints_and_indexes.py  74d93bf1ffa5_add_project_scoped_prompt_parts_table.py  75e0887b5bb7_add_workspaces_workspace_members_and_.py  7e9e79caa0dd_add_otel_spans_table_for_raw_otlp_.py  80ca7cf8295a_add_key_suffix_column_to_api_keys.py  8beb08b837ba_add_indexes_for_new_schema_performance.py  8f97975fec5c_initial_migration_logs_table.py  9e7ff715964b_add_otlp_native_schema_simplified.py  a6126327dd28_add_project_budget_caps.py  add_maf_integration_columns_to_logs.py  bd52ef259a6f_add_project_id_to_executions_table.py  cbb4906847c4_add_prompt_executions_table.py  cc4d572fe94a_add_provider_and_model_indexes.py  d14691384760_add_prompts_table.py  d2d3a7eb0491_rename_tables_to_traces_nomenclature.py  e09acd469ec7_add_invitation_requests_table.py  e533777ef92c_add_users_table.py  e6ef5938d4d0_convert_all_timestamps_to_timestamptz.py  (+5 more)
server/dakora_server/: __init__.py  auth.py  config.py  main.py
server/examples/: optimizer_demo.py
server/tests/: __init__.py  conftest.py  manual_test_compare.py  smoke_test.py  test_admin_invitation_emails.py  test_api_delete.py  test_auth.py  test_database.py  test_email_service.py  test_execution_api.py  test_fixture_infrastructure.py  test_google_gemini.py  test_invitation_emails.py  test_invitation_security.py  test_llm_client.py  test_llm_client_compare.py  test_llm_models.py  test_llm_provider.py  test_logging_postgres.py  test_otlp_execution_traces.py  test_prompt_execution_api.py  test_prompt_validation_api.py  test_prompt_versions_api.py  test_provisioning.py  test_quota.py  test_quota_env.py  test_registry_azure.py  test_registry_delete.py  test_related_traces.py  test_runner.py  test_span_type_filtering.py  test_trace_api.py  test_user_context_cache.py  test_vault_compare.py  test_vault_execute.py  test_webhook_provisioning.py
(+285 files in other folders)
