[project]
name = "dakora"
version = "2.0.0"
description = "Dakora Platform CLI - AI Control Plane for Prompt Management"
readme = "README.md"
authors = [
    { name = "bogdanpi", email = "bogdan@iduntechnologies.com" }
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.19.2",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
dakora = "dakora_cli.main:app"

[project.urls]
Homepage = "https://github.com/bogdan-pistol/dakora"
Repository = "https://github.com/bogdan-pistol/dakora.git"
Issues = "https://github.com/bogdan-pistol/dakora/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dakora_cli"]

[tool.hatch.build.targets.wheel.shared-data]
"dakora_cli/templates" = "dakora_cli/templates"