[project]
name = "dakora-server"
version = "2.0.0"
description = "Dakora Platform Server - AI Control Plane for Prompt Management"
readme = "README.md"
authors = [
    { name = "bogdanpi", email = "bogdan@dakora.io" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.0",
    "watchdog>=6.0.0",
    "httpx>=0.25.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "pyjwt[crypto]>=2.8.0",
    "svix>=1.77.0,<2.0.0",
    "bcrypt>=5.0.0",
    "base58>=2.1.1",
    "openai>=1.0.0",
    "google-generativeai>=0.8.0",
    "opentelemetry-proto>=1.20.0",
]

[project.optional-dependencies]
azure = [
    "azure-storage-blob>=12.19.0",
    "azure-identity>=1.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dakora_server"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
